--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,6 +1,7 @@
 @font-face {
   font-family: 'Digital-7';
-  src: url('./assets/fonts/Digital-7.ttf') format('truetype');
+  src: url('./public/fonts/Digital-7.woff2') format('woff2'),
+       url('./public/fonts/Digital-7.woff') format('woff');
   font-weight: normal;
   font-style: normal;
 }
