--- a/portfolio/src/App.css
+++ b/portfolio/src/App.css
@@ -1,7 +1,6 @@
 @font-face {
   font-family: 'Digital-7';
-  src: url('./public/fonts/Digital-7.woff2') format('woff2'),
-       url('./public/fonts/Digital-7.woff') format('woff');
+  src: url('./public/fonts/Digital-7.ttf') format('truetype');
   font-weight: normal;
   font-style: normal;
 }
