--- a/portfolio/src/index.css
+++ b/portfolio/src/index.css
@@ -9,3 +9,52 @@
 h1 {
   font-family: 'Digital-7', system-ui, Avenir, Helvetica, Arial, sans-serif;
 }
+
+.row-flex {
+  display: flex;
+  align-items: flex-start;
+  gap: 3rem;
+  margin-top: 1rem;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+.perfil {
+  text-align: left;
+  flex:1 1 200px;
+  max-width: 250px;
+}
+
+.perfil-img{
+  width: 100%;
+  max-width: 200px;
+  height: auto;
+  border-radius: 10%;
+}
+
+.nav-box{
+  background-color: rgba(0,0,0,0.6);
+  margin-top: 2rem;
+  padding: 1.5rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(53, 220,114, 0.5);
+  border-top: 3px solid #35dc72;
+  border-left: 3px solid #35dc72;
+  display:flex;
+  flex-direction: column;
+  gap: 1rem;
+  flex:1 1 200px;
+  min-width: 200px;
+  opacity: 0.9;
+  font-size: 1.5rem;
+  font-family: 'Digital-7', system-ui, Avenir, Helvetica, Arial, sans-serif;
+}
+
+@media (max-width: 600px){
+  .perfil, .nav-box{
+    flex:0 0 50%;
+    max-width: 50%;
+  }
+  .perfil-img{
+    max-width: 150px;
+  }
+}
